[package]
name = "cure"
version = "0.1.0"
authors = ["Mathias <mathias@c8c4.org>"]
edition = "2018"
description = "Placeholder."
documentation = "https://docs.rs/cure"
homepage = "https://github.com/mjhennig/rust-cure"
license = "X11"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mjhennig/rust-cure"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
